[package]
name = "game_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instruments = { git = "https://github.com/alec-deason/virtual_modular.git"}
bevy = { version = "0.5.0", default-features = false }
cpal = "0.13.3"
generic-array = "0.14.4"

[build-dependencies]
instruments = { git = "https://github.com/alec-deason/virtual_modular.git"}
