[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Rabbit Garden Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_asset_loader = { version = "0.6.0" }
rand = "0.8.3"
bevy_ecs_tilemap = { git = "https://github.com/alec-deason/bevy_ecs_tilemap.git" }
game_music = { path = "../game_music" }
